SUBDIRS = src

EXTRA_DIST = $(pkgfilelist)

pkgfilelist = \
src/extconf.rb \
src/clrbcon.h \
src/conversions.h \
src/adja.c \
src/compadaptor.c \
src/complearn4r.c \
src/conversions.c \
src/incrdm.c \
src/springball.c \
src/treeadaptor.c \
src/treeholder.c \
src/treemaster.c \
tests/simpletest.rb \
tests/testAdja.rb \
tests/testIncrDM.rb \
tests/testSBS.rb \
tests/testTreeM.rb
