BASICPROGRAMS = ncd
MPIPROGRAMS = partree
GRAPHICSPROGRAMS = clfun

if AMCMPI
LEV2PROGRAMS = $(BASICPROGRAMS) $(MPIPROGRAMS)
else
LEV2PROGRAMS = $(BASICPROGRAMS)
endif

if AMCGFX
LEV3PROGRAMS = $(LEV2PROGRAMS) $(GRAPHICSPROGRAMS)
else
LEV3PROGRAMS = $(LEV2PROGRAMS)
endif

bin_PROGRAMS = $(LEV3PROGRAMS)

ncd_SOURCES = ncd.c

partree_SOURCES = partree.c

clfun_SOURCES = clfun.c
clfun_LDADD = $(GFXLIBS)

#include target.mk
